# lareserve

./: README.md
lareserve_backend/: .gitignore  GEMINI.md  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
lareserve_backend/lareserve/: apps.py  models.py  tests.py  urls.py
lareserve_backend/lareserve/management/commands/: seed_data.py
lareserve_backend/lareserve/migrations/: 0001_initial.py  0002_reservation_table_id.py  0003_reservation_special_requests.py  0004_reservation_guest_email_reservation_guest_name_and_more.py  0004_reservation_table_id_charfield.py  0005_merge_20260602_1837.py  0006_alter_reservation_status.py
lareserve_backend/lareserve/serializers/: __init__.py  reservations.py  restaurants.py  users.py
lareserve_backend/lareserve/tests/: test_auth.py  test_reservations.py  test_restaurants.py
lareserve_backend/lareserve/views/: __init__.py  reservations.py  restaurants.py
lareserve_backend/lareserve_backend/: asgi.py  logging_config.py  settings.py  urls.py  wsgi.py
lareserve_frontend/: .prettierrc  README.md  eslint.config.mjs  package-lock.json  package.json
lareserve_frontend/src/app/: globals.css  layout.tsx  page.tsx
lareserve_frontend/src/app/editor/: page.tsx
lareserve_frontend/src/app/reserve/: page.tsx
lareserve_frontend/src/app/staff/: page.tsx
lareserve_frontend/src/features/shared/: helpers.ts
lareserve_frontend/src/providers/: AppProviders.tsx
lareserve_frontend/src/shared/ui/: Button.tsx  (+5 more)
lareserve_frontend/src/store/: hooks.ts  listenerMiddleware.ts  rootReducer.ts  store.ts
(+50 files in other folders)
