[project]
name = "lareserve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=47.0.0",
    "dj-rest-auth>=7.2.0",
    "django>=6.0.4",
    "django-allauth>=65.16.0",
    "django-cors-headers>=4.9.0",
    "django-extensions>=4.1",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
